test/driver/diag_show_line_numbers.0.stderr
<source>:5:7: error: cannot add 'i32' to 'bool'
    5 |     5 + true;
      |     ~ ^ ~~~~
